[package]
name = "garcon-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
garcon = { version = "0.2.3", features = ["async"] }
tokio = { version = "1.20.1", features = ["macros","rt", "sync"] }
